--- a/WebContent/inc/top.jspf
+++ b/WebContent/inc/top.jspf
@@ -1,4 +1,5 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
 <style>
 	ul, li{
 		margin:0;
@@ -12,15 +13,18 @@
 </style>
 <div id="topMenu">
 	<a href="<%=request.getContextPath() %>/index.do">홈</a>
-	로그인
-	<a href="<%=request.getContextPath() %>/register/regFrom.do">회원가입</a>
-	아이디찾기
-	비밀번호 찾기
 	
-	로그아웃
-	회원정보수정
-	회원탈퇴
-	
+	<c:if test="${logStatus==null || logStatus!='Y' }">
+		<a href="<%=request.getContextPath()%>/login.do">로그인</a>
+		<a href="<%=request.getContextPath() %>/register/regFrom.do">회원가입</a>
+		아이디찾기
+		비밀번호 찾기
+	</c:if>
+	<c:if test="${logStatus=='Y' }">
+		${logName }님 <a href="<%=request.getContextPath()%>/logout.do">로그아웃</a>
+		회원정보수정
+		회원탈퇴
+	</c:if>
 	게시판
 	
 	자료실
